fix bugs from feedback
